<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context="com.andela.currencycalculator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#000"
        android:gravity="center"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/historyTextView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#FFF"
                android:textSize="25sp" />

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#000"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currencyTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="$"
                android:textColor="#FFF"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/inputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="right"
                android:text="0"
                android:textColor="#FFF"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#000"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currencyTextAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="₦"
                android:textColor="#FFF"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/outputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="right"
                android:text="0"
                android:textColor="#FFF"
                android:textSize="50sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/currency_converting_From"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:onClick="currencyFrom"
                android:text="NGN" />

            <Spinner
                android:id="@+id/spinner_from"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/currency_switch"
                style="@style/btnStyle"
                android:onClick="switchMode"
                android:text="CURR"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/btnStyle"
                android:onClick="deleteButtonClicked"
                android:text="C" />

            <Button
                android:id="@+id/currency_converting_To"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:onClick="currencyTo"
                android:text="NGN" />

            <Spinner
                android:id="@+id/spinner_To"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="7"
                android:text="7" />

            <Button
                android:id="@+id/button8"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="8"
                android:text="8" />

            <Button
                android:id="@+id/button9"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="9"
                android:text="9" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/btnStyle"
                android:onClick="functionKeyPressed"
                android:tag="/"
                android:text="/" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="4"
                android:text="4" />

            <Button
                android:id="@+id/button5"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="5"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="6"
                android:text="6" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/btnStyle"
                android:onClick="functionKeyPressed"
                android:tag="*"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="1"
                android:text="1" />

            <Button
                android:id="@+id/button2"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="2"
                android:text="2" />

            <Button
                android:id="@+id/button3"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="3"
                android:text="3" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/btnStyle"
                android:onClick="functionKeyPressed"
                android:tag="-"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="@style/btnStyle"
                android:onClick="keyPressed"
                android:tag="0"
                android:text="0" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/btnStyle"
                android:onClick="dotKeyPressed"
                android:text="." />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/btnStyle"
                android:onClick="functionKeyPressed"
                android:tag="+"
                android:text="+" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/btnStyle"
                android:layout_weight="1"
                android:onClick="answerKeyPressed"
                android:text="=" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
